<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/payment_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/input_payment_cardNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Card Number (16 Digits)"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/payment_cardExp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_payment_expMonth"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="MM"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="/"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_payment_expYear"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="YYYY"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/payment_cardCVC"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_payment_cardCVC"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Card CVC"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_payment_purchase"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:text="@string/payment_process"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />

    <View
        android:id="@+id/divider6"
        android:layout_width="598dp"
        android:layout_height="5dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_payment_purchase" />

    <LinearLayout
        android:id="@+id/layout_payment_success"
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_success_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/output_paySuccess_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/payment_success_items"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/output_paySuccess_items"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/payment_success_pickup"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/output_paySuccess_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/payment_success_cardNum"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/output_paySuccess_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_payment_go_home"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/go_to_home"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>