<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.accountActivity.SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_new_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Enter New Username"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_new_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="Enter New E-Mail"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_department"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_department"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="clip_vertical"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:entries="@array/departments"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/input_new_passwordA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="Enter New Password"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_new_passwordB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="Re-Enter New Password"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.196" />
</androidx.constraintlayout.widget.ConstraintLayout>