...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.105">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/signup"
            android:textSize="20sp" />
    </LinearLayout>

...
